--- a/templates/itcslive/css/dashboard.css
+++ b/templates/itcslive/css/dashboard.css
@@ -1,8 +1,9 @@
-.padDiv{border:1px solid #CCCCCC;border-radius:5px;padding:0px;float:left;margin-top:0px;}
+.padDiv{border:1px solid #CCCCCC;border-radius:5px;padding:0px;float:left;margin-top:0px;margin-bottom: 30px;}
+.padDiv .right a{text-decoration: none;font-size: 19px;}
 
 .padDiv .line{border-bottom:1px solid #FF4400;line-height:2px;margin:0 auto;clear:both;}
 
-.boiteHeader{margin-top:15;padding:5px;background:#E83E01;line-height:20px;height:20px;}
+.boiteHeader {border-bottom:2px solid #4ab8cf;}
 
 .boiteHeader ol{float:right;margin:0;padding:0;}
 
