--- a/templates/itcslive/css/dashboard.css
+++ b/templates/itcslive/css/dashboard.css
@@ -1,6 +1,9 @@
 .padDiv{border:1px solid #CCCCCC;border-radius:5px;padding:0px;float:left;margin-top:0px;margin-bottom: 30px;}
-.padDiv .right a{text-decoration: none;font-size: 19px;}
-
+.padDiv .right a{text-decoration: none;font-size: 13px;}
+.padDiv .boiteHeader .right{position: relative;top: -27px;}
+.padDiv .fa-check:before { content: "\f00c";color:green;}
+.padDiv .fa-remove:before, .fa-close:before, .fa-times:before{content: "\f00d";color:red;}
+ 
 .padDiv .line{border-bottom:1px solid #FF4400;line-height:2px;margin:0 auto;clear:both;}
 
 .boiteHeader {border-bottom:2px solid #4ab8cf;}
