--- a/templates/itcslive/css/content_style.css
+++ b/templates/itcslive/css/content_style.css
@@ -581,7 +581,7 @@ input[type="submit"]{background: #5f615f !important;
 .dropdown-content a{color:#FFF;}
 .dropdown-content {display: none;
     position: absolute;
-    width: 100px;
+    width: 132px;
     background: #4ab8cf;
     padding: 10px;left: 44px;}
 .dropdown:hover .dropdown-content {
@@ -595,3 +595,36 @@ input[type="submit"]{background: #5f615f !important;
     font-size: 15px;
 }
 .toggle-menu .mobile-nav-list{position: relative;top: -64px;}
+.dropdown-content li{width:200px;display: inherit;}
+.sfHover:hover .dropdown-content{display:block;}
+.sf-menu>li>ul>li>a{width: 155px;}
+.sf-menu>li>ul>li{width: 100.33%;}
+.sf-menu>li>ul>li>a:hover{background: #39bcd8;
+    border-bottom: solid 1px;}
+ul.sf-menu > li > a:hover{background: #4ab8cf !important;}
+
+.topbordr .panel-body .form-group #truck .input-group{border:solid 1px #d0d0d0  !important;}
+.topbordr .panel-body .form-group #load .input-group{border:solid 1px #d0d0d0  !important;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
